LIST OF CHANGES FOR NPG-QC PACKAGE


 - add genotype_call_results_reporter script to report genotype_call
   results to the LIMs
 - tag_metics matches_pf_percent only stored to three decimals places now
   so trim in viewer
 - modified spatial filter qc check to read all run_lane filter.stats files
 - changed naming of spatial_filter stats files to <run>_<lane>*.spatial_filter.stats
 - upstream_tags qc check - replaced bamindexdecoder with bambi decode
 - dropped ability for qc checks to sub-sample input fastq
     instead run the checks directly off the cached fastq files
 - added fastqcheck code and replaced fastq_summ in Build.PL with fastqcheck
 - NovaSeq changes, new InterOp file format and per lane read counts now 64-bit unsigned ints
 - make travis happy as running apt-get update by default was disabled.
 - NovaSeq run info file size is around 95KB, too large for the text column type.
     Column type changed to mediumtext.
 - update Build.PL to make C programs only under precise
 - upstream_tags autoqc check: standardise access to the tracking database

release 64.6.3
 - update parsing of spatial filter stats in spatial_filter QC check

release 64.6.2
 - QC viewer changes for genotype call

release 64.6.1
 - tweak to GbS library type check in genotype call as arrived as GBS (now case-insensitive).
 - Exit rna seqc gracefully if bam has no reads
 - more stringent ref check now required for Pf3D7_v3.fa/hs37d5__Pf3D7_v3.fa
   in genotype check

release 64.6
 - add new metric glogin_pct_tpm to RNA-SeQC check
 - DBIx schema loader script: alter table to add new globin metric column
 - add functionality to pass some of the files necessary to run RNA-SeQC
   as CLI options for program qc for more flexibility for stand alone run
 - add new role for rna_seqc to implement ability to extract values from
   column other_metrics to be stored in ml warehouse database.
 - add tag_hops_power and tag_hops_percent columns to tag metrics