@@ -1,47 +1,8 @@
 use strict;
 use warnings;
 use File::Temp qw/ tempdir /;
-use Test::More tests => 27;
-use Test::Deep;
+use Test::More tests => 9;
 use Test::Exception;
-
-
-my %blat_hash = (     'PE-sequencingPrimer1'        =>   0,
-                      'smallRNA-3\'adapter'         =>   0,
-                      'NlaIII-Gex-PCR-Primer1'      =>   0,
-                      'DpnII-Gex-Adapter2-1'        =>   0,
-                      'DpnII-Gex-Adapter1-1'        =>   0,
-                      'DpnII-Gex-SequencingPrimer'  =>   0,
-                      'PE-sequencingPrimer2'        => 440,
-                      'adaptor3'                    =>   0,
-                      'smallRNA-5\'adapter'         =>   0,
-                      'genomicDNA=primer2'          =>   0,
-                      'NlaIII-Gex-Adapter2-1'       =>   0,
-                      'PE-adapters1-2'              =>   0,
-                      'genomicDNA-primer1'          =>   0,
-                      'NlaIII-Gex-Adapter1-1'       =>   0,
-                      'DpnII-Gex-PCR-Primer2'       =>   0,
-                      'smallRNA-PCS-primer1'        =>   0,
-                      'smallRNA-RT-primer'          =>   0,
-                      'NlaIII-Gex-Adapter2-2'       =>   0,
-                      'adaptor4'                    => 426,
-                      'NlaIII-Gex-Adapter1-2'       =>   0,
-                      'NlaIII-Gex-PCR-Primer2'      =>   0,
-                      'adaptor2'                    =>   0,
-                      'DpnII-Gex-Adapter1-2'        =>   0,
-                      'genomicDNA-adapter2'         =>   0,
-                      'genomicDNA-sequencingPrimer' =>   0,
-                      'PE-PCR-Primers1-1'           =>   0,
-                      'PE-PCR-Primers1-2'           => 426,
-                      'PE-adapters1-1'              => 302,
-                      'smallRNA-sequencingPrimer'   =>   0,
-                      'NlaIII-Gex-SequencingPrimer' =>   0,
-                      'adaptor1'                    =>   0,
-                      'DpnII-Gex-PCR-Primer1'       =>   0,
-                      'smallRNA-PCS-primer2'        =>   0,
-                      'genomicDNA-adapter1'         =>   0,
-                      'DpnII-Gex-Adapter2-2'        =>   0,
-    );
 
 use_ok('npg_qc::autoqc::checks::adapter');
 
@@ -97,6 +58,7 @@ local $ENV{PATH} = join q[:], $dir, $ENV{PATH};
                   )
   } 'Create the check object';
 
+  is( $test->file_type(), 'bam', 'file type is bam');
   is( $test->adapter_fasta(), 't/data/autoqc/adapter.fasta',
     'default adapter fasta listing adapters' );
   is( $test->_blat_command, qq[$bt t/data/autoqc/adapter.fasta stdin stdout -tileSize=9 -maxGap=0 -out=blast8], 'blat command line');
@@ -112,109 +74,7 @@ local $ENV{PATH} = join q[:], $dir, $ENV{PATH};
     forward => { contam_hash => {map {$_ => 0} @adapters}, adapter_starts => {}, contam_read_count => 0,},
     reverse => { contam_hash => {map {$_ => 0} @adapters}, adapter_starts => {}, contam_read_count => 0,},
   };
-  cmp_deeply ($result, $expected, 'empty result for no blat output');  
-}
-
-{
-  my $f1 = join q[/], $dir, q[9999_2_1.fastq];
-  `touch $f1`;
-  my $f2 = join q[/], $dir, q[9999_2_2.fastq];
-  `touch $f2`;
-
-  my $test = npg_qc::autoqc::checks::adapter
-             ->new( position => 2,
-                    qc_in    => $dir,
-                    id_run   => 9999,
-                    adapter_fasta => 't/data/autoqc/adapter.fasta',
-                  );
-  
-  $test->execute();
-  cmp_deeply( $test->result->forward_blat_hash, {},
-    'forward blat hash in the result is empty for an empty fastq' );
-  cmp_deeply( $test->result->reverse_blat_hash, {},
-    'reverse blat hash in the result is empty for an empty fastq' );
-}
-
-{
-  my @checks = ();
-  push @checks, npg_qc::autoqc::checks::adapter->new(
-                 position      => 1,
-                 qc_in         => $test_parent,
-                 id_run        => 9999,
-                 adapter_fasta => 't/data/autoqc/adapter.fasta',
-                 aligner_path  => $bt );
-  push @checks, npg_qc::autoqc::checks::adapter->new(
-                 rpt_list      => '9999:1',
-                 qc_in         => $test_parent,
-                 adapter_fasta => 't/data/autoqc/adapter.fasta',
-                 aligner_path  => $bt );
-
-  foreach my $test (@checks) { 
-    lives_ok { $test->execute() } 'No failures in mocked run';
-    is( $test->result->forward_read_filename, '9999_1.fastq',
-        'forward read name set correctly in the result object' );
-    ok( !defined $test->result->reverse_read_filename(),
-        'reverse read name is not defined in the result object' );
-    is( $test->result->forward_fasta_read_count, 10_000,'read count' );
-    is( $test->result->forward_contaminated_read_count, 467, 'contaminated read count' );
-    is_deeply( $test->result->forward_blat_hash, \%blat_hash, 'adapter report'  );
-  }
-}
-
-{
-  my $f1 = join q[/], $dir, q[9999_3_1.fastq];
-  `touch $f1`; 
-  my $f2 = join q[/], $dir, q[9999_3_2.fastq];
-  `cp $test_parent/9999_1.fastq $f2`;
-
-  my $test = npg_qc::autoqc::checks::adapter->new(
-                    position => 3,
-                    path     => $dir,
-                    id_run   => 9999,
-                    aligner_path   => $bt,
-                    adapter_fasta => 't/data/autoqc/adapter.fasta',
-                  );  
-  lives_ok {$test->execute()} 'execute lives';
-  cmp_deeply( $test->result->forward_blat_hash, {},
-    'forward blat hash in the result is empty for an empty fastq' );
-  is_deeply( $test->result->reverse_blat_hash, \%blat_hash,
-    'Correct adapter report for the reverse read when the forward read was empty' );
-}
-
-{
-  open $fh,  q[>], $f2f;
-  print $fh qq[ls dada\n];
-  close $fh;
-  `chmod 755 $f2f`;
-
-  my $test = npg_qc::autoqc::checks::adapter->new(
-                 position      => 1,
-                 path          => $test_parent,
-                 id_run        => 9999,
-                 adapter_fasta => 't/data/autoqc/adapter.fasta',
-                 aligner_path   => $bt,
-                      );
-  throws_ok { $test->execute() } qr/Error in pipe/, 'Failure of the aligner';
-}
-
-{
-  open my $fh,  q[>], $bt;
-  print $fh qq[ls dodo\n];
-  close $fh;
-
-  open $fh,  q[>], $f2f;
-  print $fh qq[ls t\n];
-  close $fh;
-  `chmod 755 $bt $f2f`;
-
-  my $test = npg_qc::autoqc::checks::adapter->new(
-                 position      => 1,
-                 path          => $test_parent,
-                 id_run        => 9999,
-                 adapter_fasta => 't/data/autoqc/adapter.fasta',
-                 aligner_path   => $bt,
-                      );
-  throws_ok { $test->execute() } qr/Error in pipe/, 'Failure of the aligner';
+  is_deeply ($result, $expected, 'empty result for no blat output');  
 }
 
 1;
